# moma-management

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  auth.http  docker-compose.yml  pyproject.toml  requirements.txt  versions.json
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml  post-create.sh
.github/ISSUE_TEMPLATE/: feature_request.yaml  moma_node.yaml
.github/workflows/: docker-image.yml  publish-domain-wheel.yml  release.yml  tests.yml
app/: converters.py  main.py  manager.py  schema.py
assets/aps/: ap_dataset_recommendations.json  ap_sql_select.json  ap_sql_select_without_dataset.json  ap_sql_typed.json
assets/dataset_relationships/: dl_full_example.json  dl_minimal.json
docs/: mkdocs.yml
docs/design_notes/: 2024_04_15_AP_Template_vs_Instance.md  2024_04_16_Operator_IO.md  Proposal_AP_Template_vs_Instance.md  Proposal_Operator_IO.md
docs/docs/: api-overview.md  architecture.md  automations.md  configuration.md  datastore.md  deployment.md  error-codes.md  faq.md  index.md  license.md  logging.md  maintenance.md  onboarding.md  openapi.md  qa.md  security.md
moma_management/: di.py  logger.py  main.py
moma_management/domain/: __init__.py  analytical_pattern.py  dataset.py  dataset_relationship.py  evaluation.py  exceptions.py  filters.py  mapping.yml  mapping_engine.py  pg_json_graph.py  schema_validator.py
moma_management/legacy/: converters.py
moma_management/middlewares/: auth.py  correlation_id_passtrough.py  profiling.py
moma_management/repository/: __init__.py  neo4j_pgson_mixin.py  repository.py
moma_management/services/: analytical_pattern.py  authentication.py  authorization.py  dataset.py  dataset_relationship.py  evaluation.py  ml_model.py  node.py  task.py
scripts/: concurrent_convert.py  concurrent_refresh_token.py
tests/: conftest.py  test_api.py  test_croissant_to_moma_engine.py  test_cross_concern.py  test_dataset_service.py  test_dataset_storage.py  test_edge_constraints.py  test_node_storage.py  test_permissions.py  utils.py
tests/api/: moma_api.postman_collection.json
tests/aps/: test_analytical_pattern_service.py  test_analytical_pattern_storage.py  test_ap_lifecycle.py  test_ap_validation.py  test_evaluation_lifecycle.py  test_evaluation_service.py  test_evaluation_storage.py  test_task_storage.py
tests/benchmark/: test_benchmark_list.py
tests/dataset_relationships/: test_dataset_relationship_lifecycle.py  test_dataset_relationship_service.py  test_dataset_relationship_storage.py  test_dataset_relationship_validation.py
tests/datasets/: test_croissant_to_moma_engine.py  test_dataset_performance.py  test_dataset_service.py  test_dataset_storage.py
tests/ml_models/: test_ml_model_service.py  test_ml_model_storage.py
tests/nodes/: test_node_storage.py
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.1/api-overview/: index.html
v0.0.1/architecture/: index.html
v0.0.1/automations/: index.html
v0.0.1/configuration/: index.html
v0.0.1/datastore/: index.html
v0.0.1/deployment/: index.html
v0.0.1/error-codes/: index.html
v0.0.1/faq/: index.html
v0.0.1/license/: index.html
v0.0.1/logging/: index.html
v2.5.2/: 404.html  index.html  sitemap.xml
(+169 files in other folders)
