[project]
name = "moma-management"
version = "1.0.0"
description = "Moma i/o management API"
authors = [
{ name = "Georgia Troullinou", email = "georgia.troullinou@univ-grenoble-alpes.fr" },
{ name = "Lucas Peirone", email = "lucas.peirone@univ-grenoble-alpes.fr" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.14,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "arrow>=1.3.0",
    "deepdiff>=8.6.1",
    "fastapi>=0.135.1",
    "glom>=25.12.0",
    "jose>=1.0.0",
    "jsonschema>=4.23.0",
    "neo4j>=6.1.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.41.0",
    "torch>=2.10.0"
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "testcontainers[neo4j]>=4.14.0",
    "pytest-asyncio>=1.3.0",
    "mkdocs>=1.6.1",
    "mike>=2.1.3",
    "neoteroi-mkdocs>=1.2.0",
    "pymdown-extensions>=10.20",
    "datamodel-code-generator>=0.54.1",
    "pytest-xdist>=3.8.0",
    "pyinstrument>=5.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }


[tool.setuptools]
py-modules = ["moma_management"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --maxprocesses=12"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"


